--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>علی حسینی - توسعه‌دهنده فول‌استک</title>
+    <title>محمد حسین قلی خواه  | توسعه‌دهنده فرانت اند</title>
     <meta name="description" content="علی حسینی - توسعه‌دهنده فول‌استک با تخصص در React، Node.js و تکنولوژی‌های مدرن وب" />
-    <meta name="author" content="علی حسینی" />
+    <meta name="author" content="محمد حسین قلی خواه" />
 
-    <meta property="og:title" content="علی حسینی - توسعه‌دهنده فول‌استک" />
-    <meta property="og:description" content="علی حسینی - توسعه‌دهنده فول‌استک با تخصص در React، Node.js و تکنولوژی‌های مدرن وب" />
+    <meta property="og:title" content="محمد حسین قلی خواه - توسعه‌دهنده فول‌استک" />
+    <meta property="og:description" content="محمد حسین قلی خواه  - توسعه‌دهنده فرانت اند با تخصص در React، js و تکنولوژی‌های مدرن وب" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
